styles.css
.path-mod-attendance .attbtn {
    border: 1px solid #aaa;
    border-radius: 5px;
    margin-left: 2px;
    margin-right: 2px;
    padding: 5px;
}

.path-mod-attendance .attcurbtn {
    margin-left: 2px;
    margin-right: 2px;
    padding: 5px;
}

.path-mod-attendance .attfiltercontrols {
    margin-bottom: 10px;
    margin-left: auto;
    margin-right: auto;
    width: 90%;
}

.path-mod-attendance .attfiltercontrols #currentdate {
    display: inline;
}

.path-mod-attendance .attwidth {
    margin: auto;
    width: 90%;
}

.path-mod-attendance .userwithoutenrol,
.path-mod-attendance .userwithoutenrol a {
    color: gray;
}

.path-mod-attendance .userwithoutdata,
.path-mod-attendance .userwithoutdata a {
    color: red;
}

.path-mod-attendance .takelist td {
    vertical-align: middle;
}

.path-mod-attendance .takelist .userpicture {
    margin: 0 3px;
    vertical-align: middle;
}

.path-mod-attendance .takegrid input {
    margin: 0 3px 0 6px;
}

.path-mod-attendance .takegrid .fullname {
    font-size: 0.8em;
}

.path-mod-attendance table.controls {
    text-align: center;
    width: 100%;
}

.path-mod-attendance table.controls tr {
    vertical-align: top;
}

.path-mod-attendance table.controls td.right,
.path-mod-attendance table.controls td.left {
    padding: 4px;
}

.path-mod-attendance table.controls .right {
    text-align: right;
}
/* for IE7*/
.path-mod-attendance .filtercontrols td {
    padding: 6px;
}

.path-mod-attendance .takecontrols {
    margin: 0 auto 20px auto;
    width: 800px;
}
.path-mod-attendance .takecontrols table {
    margin: 0 auto;
}
.path-mod-attendance .takecontrols .c0 {
    text-align: left;
    width: 500px;
}
.path-mod-attendance .takecontrols .c1 {
    text-align: right;
}

.path-mod-attendance .inline,
.path-mod-attendance .inline form,
.path-mod-attendance .inline div {
    display: inline;
}

.path-mod-attendance table.userinfobox {
    border: 1px solid #eee;
    padding: 0;
}
.path-mod-attendance table.userinfobox td.left {
    background-color: #eee;
    padding: 30px 10px;
}
.path-mod-attendance table.attlist td.c0 {
    text-align: right;
}

#page-mod-attendance-preferences .generalbox {
    text-align: center;
}

.path-mod-attendance .attsessions_manage_table .action-icon img.smallicon {
    margin-left: 5px;
}
#page-mod-attendance-sessions input[type="checkbox"] {
    margin-right: 2px;
}

.path-mod-attendance .setallstatuses {
    text-align: right;
}

.path-mod-attendance .remarkholder {
    position: relative;
}

.path-mod-attendance .remarkholder .remarkcontent {
    background-color: white;
    border: 1px solid #ccc;
    border-radius: 3px;
    box-shadow: 3px 3px 5px #ccc;
    display: none;
    left: 20px;
    padding: 5px;
    position: absolute;
    top: 0;
    width: 150px;
    z-index: 5000;
}

.path-mod-attendance .remarkholder:hover .remarkcontent {
    display: inline-block;
}

.path-mod-attendance .attendancestatus-P {
    color: green;
}

.path-mod-attendance .attendancestatus-E {
    color: #00aee3;
}

.path-mod-attendance .attendancestatus-L {
    color: #f7931e;
}

.path-mod-attendance .attendancestatus-A {
    color: red;
}

.path-mod-attendance .attreport .contrast {
    background-color: #eaeaea;
}

.path-mod-attendance .attreport .center {
    text-align: center;
}

.path-mod-attendance .attreport .left {
    text-align: left;
}

.path-mod-attendance .attreport .bottom {
    vertical-align: bottom;
}

.path-mod-attendance .attreport .nowrap {
    white-space: nowrap;
}

.path-mod-attendance .attreport .narrow {
    width: 1px;
}
.path-mod-attendance .student-pass {
    font-size: x-large;
}

